<resources>
    <string name="app_name">BMI</string>
    <string name="unit">Cm</string>
    <string name="female_text">Female</string>
    <string name="age">Age</string>
    <string name="starting_height">170</string>
    <string name="starting_weight">55</string>
    <string name="starting_age">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
</resources>